--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ willow==1.1               # via wagtail
           <ul>
             <li class="fragment">Use npm/yarn for JavaScript dependency management</li>
             <li class="fragment">Python packages are the lowest common denominator</li>
-            <li class="fragment">conda can be used Instead of pip to install a packaged Django project</li>
+            <li class="fragment">conda can be used instead of pip to install a packaged Django project</li>
             <li class="fragment">Use tools like pex or snapcraft</li>
             <li class="fragment">Use platform package managers if necessary</li>
             <li class="fragment">Use Docker if necessary</li>
